[package]
name = "md5-img"
version = "0.1.3"
authors = ["Niko Lepka <slench102+git@gmail.com>"]

description = "A tool for converting text into a bmp representation of their md5 checksum"
repository = "https://github.com/ElectricCoffee/md5-bmp.git"
homepage = "https://github.com/ElectricCoffee/md5-bmp"

license = "BSD-3-Clause"
readme = "README.md"

keywords = ["bmp", "image", "md5"]

exclude = [ "*.bmp", "*.png" ]

[dependencies]
bmp = "0.3.0"
md5 = "0.3.7"
